...
                            'icon': Icons.home,
                            'label': 'Home',
                            'color': AppColors.vibrantPurple,
                          },
                          {
                            'icon': Icons.quiz,
                            'label': 'Create',
                            'color': AppColors.turquoise,
                          },
                          {
                            'icon': Icons.sports_esports,
                            'label': 'Play',
                            'color': AppColors.mintGreen,
...
